# udisks

./: README.md  configure.ac
doc/: Makefile.am  udisks2-docs.xml.in.in  udisks2-docs.xml.zfs.dbus.in  udisks2-docs.xml.zfs.generated.in  udisks2-docs.xml.zfs.sed  udisks2-sections.txt.in.in  udisks2-sections.txt.zfs.sections.in  udisks2-sections.txt.zfs.sed  udisks2.types.in.in  udisks2.types.zfs.in  udisks2.types.zfs.sed
modules/: Makefile.am
modules/zfs/: Makefile.am  udiskslinuxblockzfs.c  udiskslinuxblockzfs.h  udiskslinuxfilesystemzfs.c  udiskslinuxfilesystemzfs.h  udiskslinuxmanagerzfs.c  udiskslinuxmanagerzfs.h  udiskslinuxmodulezfs 2.h  udiskslinuxmodulezfs.c  udiskslinuxmodulezfs.h  udiskslinuxpoolobjectzfs 2.c  udiskslinuxpoolobjectzfs.c  udiskslinuxpoolobjectzfs.h  udiskszfsdaemonutil.c  udiskszfsdaemonutil.h  udiskszfstypes 2.h  udiskszfstypes.h
modules/zfs/data/: Makefile.am  org.freedesktop.UDisks2.zfs.policy.in  org.freedesktop.UDisks2.zfs.xml  udisks2-zfs.pc.in
packaging/: udisks2.spec
po/: POTFILES.in
src/: udiskslinuxmanager.c
src/tests/dbus-tests/: Makefile.am  test_10_basic.py  test_zfs.py
udisks/: Makefile.am
